[package]
name = "rocket-mem-test"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]

[dependencies]
rocket = "0.3.17"
rocket_codegen = "0.3.17"
rocket_contrib = "0.3.17"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7", features = ["v4"] }